Some minor refactoring